<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".resultcalculator.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="6dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                android:src="@drawable/a_model"
                android:background="@drawable/img_border"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/diagram" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditText_W"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                    style="@style/CustomOutlineBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/W"
                        android:fontFamily="@font/mvboli"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditText_L"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                    style="@style/CustomOutlineBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mvboli"
                        android:hint="@string/L"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditText_X"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                    style="@style/CustomOutlineBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/x"
                        android:inputType="numberDecimal"
                        android:fontFamily="@font/mvboli"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </com.google.android.material.textfield.TextInputLayout>


                    <SeekBar
                        android:id="@+id/SeekBar_L"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/border"
                        android:paddingStart="@dimen/_8sdp"
                        android:progressTint="@color/yellow"
                        android:thumbTint="@color/white" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/my_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:text="@string/calculate"
                android:background="@drawable/button_selector"
                android:onClick="CalculateResult_One"/>
        </LinearLayout>


<!--            <TextView-->
<!--                android:id="@+id/text_result"-->
<!--                android:visibility="gone"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/resultTitle"-->
<!--                android:textStyle="bold"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:textSize="20sp"-->
<!--                style="@style/textViewResultOne"/>-->
            <TableLayout
                android:visibility="gone"
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:padding="5dp"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/result1"
                        android:layout_weight="1"
                        style="@style/textViewResultOne"/>
                    <TextView
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/result_one"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/result2"
                        android:layout_weight="1"
                        style="@style/textViewResultOne" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/result_two"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/result3"
                        android:layout_weight="1"
                        style="@style/textViewResultOne"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/result_three"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/textViewResultOne"
                        android:layout_weight="1"
                        android:text="@string/result4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/result_five"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/result5"
                        android:layout_weight="1"
                        style="@style/textViewResultOne" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/result_four"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout_additional"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/deflection" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/EditText_Elasticity"
                                style="@style/CustomOutlineBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterEnabled="true"
                                app:counterMaxLength="20"
                                app:errorEnabled="true"
                                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="numberDecimal"
                                    android:fontFamily="@font/mvboli"
                                    android:hint="@string/E" />
                            </com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/EditText_Inertia"
                                style="@style/CustomOutlineBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterEnabled="true"
                                app:counterMaxLength="20"
                                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="numberDecimal"
                                    android:fontFamily="@font/mvboli"
                                    android:hint="@string/I" />
                            </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/my_button24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:text="@string/calculate"
                    android:background="@drawable/button_selector"
                    android:onClick="CalculateResult_Two"/>


            </LinearLayout>


                <TableLayout
                android:id="@+id/tableLayout2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:text="@string/result6"
                        android:layout_weight="1"
                        style="@style/textViewInputOne" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/result_six"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/textViewInputOne"
                        android:layout_weight="1"
                        android:text="@string/result7" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/result_seven"
                        android:layout_weight="1"
                        android:textSize="@dimen/_16ssp"/>
                </TableRow>

            </TableLayout>

            </LinearLayout>




</ScrollView>